@@ -26,7 +26,7 @@
   </head>
   
   <body>
-    <div id="nav"><a href='../index.html'>Home</a> | <a href="../tostring/index.html">Next</a></div>
+    <div id="nav"><a href='../index.html'>Home</a> | <a href="../sugarpak/index.html">Next</a></div>
     <h1>Core Library</h1>
     <div class='results'/>
   </body>
